--- a/serverless.yml
+++ b/serverless.yml
@@ -62,10 +62,10 @@ resources:
       Type: "AWS::DynamoDB::Table"
       Properties:
         KeySchema:
-          - AttributeName: flight_id
+          - AttributeName: id
             KeyType: HASH
         AttributeDefinitions:
-          - AttributeName: flight_id
+          - AttributeName: id
             AttributeType: S
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:custom.FLIGHT_BOOKING_APPLICATION_TABLE}
