--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "serverless-appsync-plugin": "^1.12.1",
+    "serverless-offline": "^8.4.0",
     "serverless-pseudo-parameters": "^2.6.1"
   }
 }
