--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "dynamoose": "^2.8.5",
     "serverless-appsync-plugin": "^1.12.1",
-    "serverless-offline": "^8.4.0",
     "serverless-pseudo-parameters": "^2.6.1"
+  },
+  "devDependencies": {
+    "serverless-offline": "^8.5.0"
   }
 }
